Final working copy for SEM.JS with REST/LocalStorage

--- a/bower.json
+++ b/bower.json
@@ -9,13 +9,13 @@
     "backbone": "*",
     "accounting": "~0.3.2",
     "jquery": "1.9.1",
-    "bootbox": "*",
     "sass-bootstrap": "*",
     "requirejs": "~2.1.6",
     "underscore": "~1.5.0",
     "backbone.localStorage": "~1.1.6",
     "backbone.marionette": "~1.4.1",
     "backbone.stickit": "~0.7.0",
-    "requirejs-text": "~2.0.10"
+    "requirejs-text": "~2.0.10",
+    "socket.io": "~0.9.15"
   }
 }
